--- a/.gitmodules
+++ b/.gitmodules
@@ -2,5 +2,5 @@
 	path = MLX42
 	url = https://github.com/codam-coding-college/MLX42.git
 [submodule "libft_with_additions"]
-	path = libft_with_additions
+	path = libft
 	url = https://github.com/Finanzcreeper/libft_with_additions.git
