bg color, color adjustment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 		"cstdlib": "c",
 		"random": "c",
 		"string.h": "c",
-		"minirt_defines.h": "c"
+		"minirt_defines.h": "c",
+		"minirt.h": "c"
 	}
 }
